data/derived/comb/progs/unify/prog7480.ml.out
Characters 84-85:
  List.fold_left f base fs;;
                 ^
Error: This expression has type ('a -> 'b -> 'b) -> 'b -> 'b
       but an expression was expected of type
         ('a -> 'b -> 'b) -> 'b -> 'a -> 'b -> 'b
       The type variable 'b occurs inside 'a -> 'b -> 'b
